@@ -26,6 +26,7 @@ DRAFT 0.5
   * Use `fdri:contains` with type restrictions to create nesting relations between gridded datasets, groups, arrays and dimensions.
   * Add `fdri:references` to express the relation between Arrays and the dimensions(s) they use.
 * NON-BREAKING: Relax the definition of rdfs:label in the recordspec schema to allow both xsd:string and rdf:langString literals (was only rdf:langString).
+* NON-BREAKING: Add keyword (dcat:keyword) as an optional property of Dataset in the recordspec schema.
 
 DRAFT 0.4.2
 -----------
